addind post,update and delete endpoinst
