# routes/index.js
@@ -1,11 +1,5 @@
 const router = require('express').Router();
-const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('../swagger.json');
 
-router.use('/api-docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocument));
-
-
-router.use('/', require('./contacts'));
+router.use('/contacts', require('./contacts'));
 
 module.exports = router;
